--- a/project/config.conf
+++ b/project/config.conf
@@ -5,6 +5,8 @@ server.thread_pool = 10
 
 [/]
 tools.encode.on = True
+tools.encode.add_charset = True
+tools.encode.encoding = 'utf-8'
 
 [/static]
 tools.staticdir.on: True
